--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -1,34 +1,38 @@
+<div class="Forgotpassword-board" fxLayout="column" fxAlign="center">
+  <div fxLayout="10" fxLayoutAlign="center" class="flex">
 
-      <div class="Forgotpassword-board" fxLayout="column" fxAlign="center">
-        <div fxLayout="10" fxLayoutAlign="center" class="flex">
-          
-          <mat-card-title class="matCardTitle" fxLayoutAlign="center">
-      
-              <h2> <span style="color:skyblue;font-weight:bold">f</span>
-                <span style="color:orangered;font-weight:bold">u</span>
-                <span style="color:yellow;font-weight:bold">n</span>
-                <span style="color:skyblue;font-weight:bold">d</span>
-                <span style="color:green;font-weight:bold">o</span>
-                <span style="color:orangered;font-weight:bold">o</span>
-                </h2>
-          </mat-card-title>
-        </div>
+    <mat-card-title class="matCardTitle" fxLayoutAlign="center">
 
-        <div>
-  
-          <div class="example-container">
-          <div fxLayoutAlign="center center">
-            <div>
-              <p>EmailId</p>
-            <mat-form-field appearance="outline" class="input-style">
-            <div><input type="text" matInput placeholder="Enter EmailId*" [formControl]="emailId" required></div>
-            <mat-error>this field is required</mat-error> 
-          </mat-form-field>
-            </div>
-            
-         
-            <div><button mat-flat-button (click)="onForgotpassword()">submit</button></div>
-        </div>
-      
+      <h2> <span style="color:skyblue;font-weight:bold">f</span>
+        <span style="color:orangered;font-weight:bold">u</span>
+        <span style="color:yellow;font-weight:bold">n</span>
+        <span style="color:skyblue;font-weight:bold">d</span>
+        <span style="color:green;font-weight:bold">o</span>
+        <span style="color:orangered;font-weight:bold">o</span>
         
-        
+      </h2>
+    </mat-card-title>
+  </div>
+  <div>
+      <mat-card-subtitle class="matCardSubTitle" fxLayoutAlign="center center">
+        <h2>Enter Email-Id</h2>
+      </mat-card-subtitle>
+      </div>
+
+
+  <div class="example-container">
+    <div fxLayout="column" fxLayoutAlign="center center">
+      <div class="adjustment" fxFlex="20">
+        <mat-form-field appearance="outline" class="input-style">
+          <mat-label>Email</mat-label>
+          <input input type="text" matInput placeholder="Enter your EmailId*" [formControl]="emailId"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+          <mat-error>this field is required</mat-error>
+        </mat-form-field>
+      </div>
+
+      <div fxFlex="20" fxLayoutAlign="end end">
+        <button class="button" mat-raised-button color="primary" (click)="onForgotpassword()">submit</button>
+      </div>
+    </div>
+  </div>
