--- a/src/app/components/forgotpassword/forgotpassword.component.scss
+++ b/src/app/components/forgotpassword/forgotpassword.component.scss
@@ -1,8 +1,7 @@
 .Forgotpassword-board
 {
-  height: 502px;
-  width: 450px;
-  // margin: auto;
+  height: 350px;
+  width: 350px;
   border-radius: 8px;
   display: block;
   margin: 0 auto;
@@ -21,14 +20,16 @@
 {
   font-size: xx-large;
 }
-.matCardSubTitle
+
+.adjustment
 {
-  font-size: large
+  width: 205px;
+  height: 50px;
 }
 
 
-.mat-input-element {
 
+.mat-input-element {
   font: inherit;
   background: 0 0;
   color: currentColor;
@@ -41,27 +42,29 @@
   vertical-align: bottom;
   text-align: inherit;
   height: 30px;
-  
 }
-
-.input-style
+.matCardTitle
 {
-
-  font: inherit;
-  background: 0 0;
-  color: currentColor;
-  border: none;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  width: auto;
-  max-width: 100%;
-  vertical-align: bottom;
-  text-align: inherit;
-  height: 30px;
+  height: 100px;;
 }
 
-// #button
-// {
-//   margin-left: 80%;
-// }
+
+
+
+
+
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix {
+  padding: 0.4em 0px !important;
+  }
+  
+  ::ng-deep .mat-form-field-label-wrapper {
+  top: -1.5em;
+  }
+  
+  ::ng-deep
+  .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
+  .mat-form-field-label {
+  transform: translateY(-1.1em) scale(0.75);
+  width: 133.33333%;
+  }
