--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -9,6 +9,7 @@
           <span style="color:orangered;font-weight:bold">o</span>
           </h2>
     </mat-card-title>
+    
     <div>
     <mat-card-subtitle class="matCardSubTitle" fxLayoutAlign="center center">
       <h2>Reset password</h2>
@@ -20,16 +21,18 @@
      
           <div class="main" fxLayout="column" fxLayoutAlign="center center" id="newPass"></div>
           <div class="example-container">
-              <span>Password</span>
-            <mat-form-field appearance="outline" class="input-style">
+              
+            <mat-form-field   appearance="outline" class="input-style" fxFlex>
+                <mat-label>Password</mat-label>
               <input type="password" matInput placeholder="Enter your new password" formControlName="password"
                 [type]="hide ? 'password' : 'text'" [(ngModel)]="password.password" required>
               <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </mat-form-field>
           </div>
           <div class="example-container">
-              <span>Confirm Password</span>
-            <mat-form-field appearance="outline" class="input-style" id="confirmPass">
+              
+            <mat-form-field appearance="outline" class="input-style" id="confirmPass" fxFlex>
+                <mat-label>Confirm Password</mat-label>
               <input type="password" matInput placeholder="Enter your confirm password"
                 formControlName="confirmPassword" [type]="hide ? 'password' : 'text'"
                 [(ngModel)]="password.confirmPassword" required>
