--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,10 +1,3 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
-  width: 100%;
-  border-block-color: inherit;
-}
-
 .example-full-width {
   width: 100%;
 }
@@ -13,58 +6,48 @@
   border: 1px cornsilk;
 }
 
-.mat-input-element {
-  font: inherit;
-  background: 0 0;
-  color: currentColor;
-  border: none;
-  outline: 0;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  max-width: 100%;
-  vertical-align: bottom;
-  text-align: inherit;
-  height: 30px;
-  // font-size: xx-large;
-}
-
-.matCardTitle{
+.matCardTitle {
   font-size: xx-large;
 }
-// .matCardSubTitle
-// {
-//   font-size: larger;
-//   background: 0 0;
-//   color: currentColor;
-//   border: none;
-//   outline: 0;
-//   padding: 0;
-//   margin: 0;
-//   width: 100%;
-//   max-width: 100%;
-//   vertical-align: bottom;
-//   text-align: inherit;
-//   height: 30px;
-// }
 
 .login-board {
-  // background: red;
-  height: 530px;
-  width: 450px;
-  // margin: auto;
+  height: 500px;
+  width: 400px;
   border-radius: 8px;
   display: block;
   margin: 0 auto;
   margin-top: 80px;
   border: 1px solid #dadce0;
-  box-shadow: 0 8px 16px 0 rgba(189, 83, 83, 0.459); 
+  box-shadow: 0 8px 16px 0 rgba(189, 83, 83, 0.459);
 }
-
 
 .flex {
   border: 1px solid black;
 }
-#login{
+#login {
   margin-left: 70%;
+}
+.example_container
+{
+  width: 330px;
+}
+.adj
+{
+  height:50;
+}
+
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix {
+  padding: 0.4em 0px !important;
+}
+
+::ng-deep .mat-form-field-label-wrapper {
+  top: -1.5em;
+}
+
+::ng-deep
+  .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
+  .mat-form-field-label {
+  transform: translateY(-1.1em) scale(0.75);
+  width: 133.33333%;
 }
