--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,86 +1,103 @@
 <div class="main" fxLayout="column" fxLayoutAlign="center center">
   <mat-card class="matCard">
     <mat-card-title class="matCardTitle" fxLayoutAlign="center">
-      
-        <h2> <span style="color:skyblue;font-weight:bold">f</span>
-          <span style="color:orangered;font-weight:bold">u</span>
-          <span style="color:yellow;font-weight:bold">n</span>
-          <span style="color:skyblue;font-weight:bold">d</span>
-          <span style="color:green;font-weight:bold">o</span>
-          <span style="color:orangered;font-weight:bold">o</span>
-          </h2>
-      
+
+      <h2> <span style="color:skyblue;font-weight:bold">f</span>
+        <span style="color:orangered;font-weight:bold">u</span>
+        <span style="color:yellow;font-weight:bold">n</span>
+        <span style="color:skyblue;font-weight:bold">d</span>
+        <span style="color:green;font-weight:bold">o</span>
+        <span style="color:orangered;font-weight:bold">o</span>
+      </h2>
+
     </mat-card-title>
-
-    <!-- <mat-card-subtitle class="mat-card-subtitle" fxLayoutAlign="center">  
-      <h4 class="headertwo">Register Here</h4>
-    </mat-card-subtitle> -->
-     
-   
-
+    <div>
+      <mat-card-subtitle class="matCardSubTitle" fxLayoutAlign="center center">
+        <h2>Register here</h2>
+      </mat-card-subtitle>
+    </div>
     <div class="example-container">
       <form [formGroup]="registerForm">
         <div>
-          <p> First Name</p>
-          <mat-form-field appearance="outline" class="input-style">
-                    
-            <input type="text" matInput matInput placeholder="Enter first name" formControlName="firstName" [(ngModel)]="user.firstName"
-             
-            pattern="[a-zA-Z ]*" required>
-            <mat-error>This field is required.</mat-error>
-          </mat-form-field>
-         
-        </div>
+          <div>
+            <mat-form-field appearance="outline" class="input-style" fxFlex>
+              <mat-label> First Name</mat-label>
+              <input type="text" matInput matInput placeholder="Enter first name" formControlName="firstName" #firstName
+                [(ngModel)]="user.firstName" pattern="[a-zA-Z ]*" required>
+              <mat-error *ngIf="submitted && f.firstName.errors">
+                <mat-error *ngIf="f.firstName.errors.required">first name is required</mat-error>
 
-        <div>
-         <p>Last Name</p>
-          <mat-form-field appearance="outline" class="input-style">
-            
-            <input type="text" matInput  placeholder="Enter last name*" formControlName="lastName" [(ngModel)]="user.lastName"
-            pattern="[a-zA-Z ]*" required>
-            <mat-error>This field is required.</mat-error>
-           
-          </mat-form-field>
-        </div>
-        <div>
-            <p>Email</p>
-          <mat-form-field appearance="outline" class="input-style">
-            
-            <input type="email" matInput placeholder="Enter Email-Id*" formControlName="emailId" [(ngModel)]="user.emailId"
-              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
-              <mat-error>This field is required.</mat-error>
-          </mat-form-field>
-        </div>
-        <div>
-            <p>Mobile</p>
-          <mat-form-field appearance="outline" class="input-style">
-            
-            <input type="text" matInput placeholder="Enter Phone Number*" formControlName="mobileNumber" [(ngModel)]="user.mobileNumber"
-              pattern="[0-9]{10}" required>
-              <mat-error>This field is required.</mat-error>
-               
-                        
-          </mat-form-field>
-        </div>
-        <div>
-            <p>Password</p>
-          <mat-form-field appearance="outline" class="input-style">
-           
-            <input type="password" matInput placeholder="Enter password*" [type]="!hide ? 'password' : 'text'"
-              formControlName="password" [(ngModel)]="user.password" required>
-            <mat-icon matSuffix (click)="hide = !hide">{{!hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-            <mat-error>This field is required.</mat-error>
-          </mat-form-field>
-        </div>
-        <div>
+              </mat-error>
+              <mat-error> please enter valid Name.</mat-error>
+            </mat-form-field>
+          </div>
 
-          
-        </div>
-        <div class="buttonRegister" fxLayoutAlign="center">
-         <button mat-raised-button color="primary"  id="register"  (click)="onRegister()" routerLink='/login' [disabled]="service.form.invalide">Register</button> 
-          <!-- <button mat-raised-button color="primary" id="login" routerLink='/login'> Login </button> --> 
-        </div>
+          <div>
 
+            <mat-form-field appearance="outline" class="input-style" fxFlex>
+              <mat-label>Last Name</mat-label>
+              <input type="text" matInput placeholder="Enter last name*" formControlName="lastName" #lastName
+                [(ngModel)]="user.lastName" pattern="[a-zA-Z ]*" required>
+
+              <mat-error *ngIf="submitted && f.lastName.errors">
+                <mat-error *ngIf="f.lastName.errors.required">last name is required</mat-error>
+
+              </mat-error>
+              <!-- <mat-error *ngIf="lastName.invalid">{{getErrorMessage()}}</mat-error> -->
+              <mat-error> please enter valid Last Name.</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div>
+
+            <mat-form-field appearance="outline" class="input-style" fxFlex>
+              <mat-label>Email</mat-label>
+              <input type="email" matInput placeholder="Enter Email-Id*" #Email formControlName="emailId"
+                [(ngModel)]="user.emailId" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
+
+              <mat-error *ngIf="submitted && f.emailId.errors">
+                <mat-error *ngIf="f.emailId.errors.required"> Email-Id is required</mat-error>
+
+              </mat-error>
+              <mat-error> please enter valid Email-id.</mat-error>
+            </mat-form-field>
+          </div>
+          <div>
+
+            <mat-form-field appearance="outline" class="input-style" fxFlex>
+              <mat-label>Mobile</mat-label>
+              <input type="text" matInput placeholder="Enter Phone Number*" #Mobile formControlName="mobileNumber"
+                [(ngModel)]="user.mobileNumber" pattern="[789][0-9]{9},{10}" maxlength="10" required>
+
+              <mat-error *ngIf="submitted && f.mobileNumber.errors">
+                <mat-error *ngIf="f.mobileNumber.errors.required">mobileNumber is required</mat-error>
+
+              </mat-error>
+              <!-- <mat-error *ngIf="Mobile.invalid">{{getErrorMessage()}}</mat-error> -->
+              <mat-error> please enter valid Phone number.</mat-error>
+
+            </mat-form-field>
+          </div>
+          <div>
+
+            <mat-form-field appearance="outline" class="input-style">
+              <!-- <mat-label >Password</mat-label> -->
+              <input type="password" matInput placeholder="Enter password*" #password
+                [type]="!hide ? 'password' : 'text'" formControlName="password" [(ngModel)]="user.password" required>
+              <mat-label appearance="outline">Password</mat-label>
+              <mat-icon matSuffix (click)="hide = !hide">{{!hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="buttonRegister" fxLayout="row" fxLayoutAlign="space-around center">
+            
+            <button mat-raised-button color="primary" id="register" (click)="onRegister()"
+              [disabled]="loading">Register</button>
+            <!-- <button mat-raised-button color="primary" id="login" routerLink='/login'> Login </button>  -->
+          </div>
+        </div>
+        
       </form>
     </div>
   </mat-card>
