--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -121,3 +121,13 @@
     overflow: auto;
     border: 1px solid #555;
   }
+// .input_search
+// {
+//     outline: none;
+// }
+
+// .searchicon
+// {
+//     width: 160px;
+//     height: 200px;
+// }
