--- a/src/app/components/notes/notes.component.scss
+++ b/src/app/components/notes/notes.component.scss
@@ -7,6 +7,18 @@
     border: 1px solid transparent;
 }
 
+.colors {
+    height: 100px;
+    width: 100px;
+}
+
+.circle {
+    height: 25px;
+    width: 25px;
+    border-radius: 12px 12px;
+    border: 1px solid red;
+}
+
 .notes {
     height: 75%;
     width: 85%;
