--- a/src/app/components/update-notes/update-notes.component.scss
+++ b/src/app/components/update-notes/update-notes.component.scss
@@ -8,15 +8,15 @@
 
 .size
 {
-    width : 470px;
-    height : 130px;
-    margin-right: 5%;
-    margin-left: 5%;
-    margin-bottom: auto;
-    margin-top: 3%;
-    border-radius: 02%;
-    box-shadow: 0 8px 16px 0 rgba(189, 83, 83, 0.459); 
-    align-content: center 
+    width : 100%;
+    height : 100%;
+    // margin-right: 5%;
+    // margin-left: 5%;
+    // margin-bottom: auto;
+    // margin-top: 3%;
+    // border-radius: 02%;
+    // box-shadow: 0 8px 16px 0 rgba(189, 83, 83, 0.459); 
+    // align-content: center 
 }
 .adjustment
 {
@@ -25,17 +25,19 @@
 .inputadj
 {
     height: 45px;
-    width: 470px;
+    width: 550px;
     border: none;
 }
 .discriptionAdjust
 {
     height: 45px;
-    width: 470px;
+    width: 550px;
     border: none;
     
 }
 
+
 .board {
     margin-top: 10%;
 }
+
