--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.mayapp-no-padding-dialog .mat-dialog-container {
+   padding: 0;
+   margin: 0;
+   overflow-x:hidden;
+   overflow-y: hidden;
+}
